# galaxy-tool-recommendation-ai-agent

./: LICENSE  README.md  build_kb.py  main.py  pyproject.toml
data/: workflow_summaries.json
data/output/: wf_rag_llm_responses.json
src/: collect_gtn_topics.py
src/galaxy_tool_recommendation_ai_agent/: __init__.py  agent.py  build_kb.py  build_workflow_vectors.py  cli.py  collect_gtn_material.py  collect_iwc_workflows.py  collect_published_histories.py  collect_published_workflows.py  config.py  ollama_client.py  query_workflow_rag.py  summarise.py  tools.py
src/galaxy_tool_recommendation_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
